--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "connected-react-router": "6.9.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
     "react-scripts": "4.0.3",
     "redux": "4.1.2",
+    "redux-thunk": "2.4.1",
     "typesync": "0.8.0"
   },
   "devDependencies": {
