--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-scripts": "4.0.3",
     "redux": "4.1.2",
     "redux-thunk": "2.4.1",
+    "typescript-fsa": "3.0.0",
+    "typescript-fsa-reducers": "1.2.2",
     "typesync": "0.8.0"
   },
   "devDependencies": {
